@@ -1,3 +1,8 @@
+2009-06-24  Jason Merrill  <jason@redhat.com>
+
+	PR c++/40342
+	* g++.dg/template/overload10.C: New.
+
 2009-06-22  Matthias Klose  <doko@ubuntu.com>
 
 	PR objc/28050
